• Fix and update: Intro page

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -29,7 +29,7 @@
   "profilePage": "Profil",
   "age": "Age",
   "myPets": "My Pets",
-  "calendvaccineTrackingar": "Vaccine Tracking",
+  "calendvaccineTrackingar": "Vaccinies",
   "foodTracking": "Food Tracking",
   "settings": "Settings",
   "settingsPageTitle1": "Account",
