--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -21,8 +21,9 @@
   "welcomeMessage2": "Pet Tracking",
   "orMailLoginMethod": "or login with email",
   "emailExample": "mail@mail.com",
+  "passwordExample": "Password (at least 6 characters)",
   "rememberMe": "Remember Me",
-  "forgotPassword": "Forgot Password",
+  "forgetPassword": "Forget Password",
   "loginButton": "Login",
   "dontHaveAccount": "Don't have an account?",
   "register": "Register",
