--- a/assets/translations/tr.json
+++ b/assets/translations/tr.json
@@ -21,8 +21,9 @@
   "welcomeMessage2": "Hoşgeldiniz",
   "orMailLoginMethod": "veya e-posta ile giriş yapın",
   "emailExample": "eposta@mail.com",
+  "passwordExample": "Şifre (en az 6 karakter)",
   "rememberMe": "Beni Hatırla",
-  "forgotPassword": "Şifremi Unuttum",
+  "forgetPassword": "Şifremi Unuttum",
   "loginButton": "Giriş Yap",
   "dontHaveAccount": "Hesabınız yok mu?",
   "register": "Kayıt Ol",
