Update: homepage edited

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -16,6 +16,41 @@
   "nextButton": "Next",
   "startButton": "Start",
 
+  "homePage": "Home Page",
+  "homePageTitle1": "Walking Assistant",
+  "homePageTitle2": "Training Assistant",
+  "homePageTitle3": "Socialization Assistant",
+  "homePageTitle4": "Pet Tracking Premium",
+  "deleteAll": "Delete All",
+  "activityTitle": "Activities",
+  "walkingActivity": "Walking",
+  "trainingActivity": "Training",
+  "socializingActivity": "Socializing",
+  "waterDrinkActivity": "Drinking",
+  "foodEatActivity": "Eating",
+  "vaccineActivity": "Vaccine",
+  "bathActivity": "Bathing",
+  "sleepingActivity": "Sleeping",
+  "addActivity": "Add",
+  "minicardWidget": "Mini Card",
+  "kilogram": "Kilogram",
+  "spendMoney": "Spend Money",
+  "turkishLiraUnit": "TL",
+  "usDollarUnit": "$",
+  "kilogramUnit": "kg",
+  "foodTrackingTitle": "Food Tracking",
+  "foodBrand": "Food Brand",
+  "contentInformation": "Content Information",
+  "minicard2Widget": "Mini Card 2",
+  "vaccineTracking": "Vaccine Tracking",
+  "walking": "Walking",
+  "dayUnit": "Day",
+  "upcomingDate": "Upcoming Date",
+  "minuteUnit": "Min",
+  "more": "More",
+  "start": "Start",
+  "stop": "Stop",
+
   "LoginPage": "Login Page",
   "welcomeMessage1": "Welcome to",
   "welcomeMessage2": "Pet Tracking",
