--- a/assets/translations/tr.json
+++ b/assets/translations/tr.json
@@ -30,6 +30,41 @@
   "faq": "S.S.S.",
   "gdpr": "KVKK",
 
+  "homePage": "Ana Sayfa",
+  "homePageTitle1": "Yürüyüş Asistanı",
+  "homePageTitle2": "Eğitim Asistanı",
+  "homePageTitle3": "Sosyalleşme Asistanı",
+  "homePageTitle4": "PetTakip Premium",
+  "deleteAll": "Hepsini Sil",
+  "activityTitle": "Aktiviteler",
+  "walkingActivity": "Yürüyüş",
+  "trainingActivity": "Eğitim",
+  "socializingActivity": "Sosyalleşme",
+  "waterDrinkActivity": "Su İçme",
+  "foodEatActivity": "Yemek",
+  "vaccineActivity": "Aşı",
+  "bathActivity": "Banyo",
+  "sleepingActivity": "Uyuma",
+  "addActivity": "Ekle",
+  "minicardWidget": "Mini Kart",
+  "kilogram": "Kilogram",
+  "spendMoney": "Harcama",
+  "turkishLiraUnit": "TL",
+  "usDollarUnit": "$",
+  "kilogramUnit": "kg",
+  "foodTrackingTitle": "Mama Takibi",
+  "foodBrand": "Mama Markası",
+  "contentInformation": "İçerik Bilgisi",
+  "minicard2Widget": "Mini Kart 2",
+  "vaccineTracking": "Aşı Takibi",
+  "walking": "Yürüyüş",
+  "dayUnit": "Gün",
+  "upcomingDate": "Yaklaşan Tarih",
+  "minuteUnit": "dk",
+  "more": "Daha Fazla",
+  "start": "Başla",
+  "stop": "Durdur",
+
   "profilePage": "Profil",
   "age": "Yaş",
   "myPets": "Evcil Hayvanlarım",
