--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -65,6 +65,15 @@
   "faq": "FAQ",
   "gdpr": "GDPR",
 
+  "registerPage": "Register Page",
+  "registerAppBarTitle": "Register",
+  "registerFormText1": "Username",
+  "registerFormText2": "Name Surname",
+  "registerFormText3": "Email",
+  "registerFormText4": "Password",
+  "registerFormText5": "Password Again",
+  "registerButton": "Register",
+
   "profilePage": "Profil",
   "age": "Age",
   "myPets": "My Pets",
@@ -81,5 +90,27 @@
   "settingsPageSubtitle6": "Language Settings",
   "settingsPageSubtitle7": "Theme Settings",
   "settingsPageSubtitle8": "Privacy Policy",
-  "settingsPageSubtitle9": "About"
+  "settingsPageSubtitle9": "About",
+
+  "marketPage": "Market",
+  "petCategories": "Categories",
+  "all": "All",
+  "dog": "Dog",
+  "cat": "Cat",
+  "bird": "Bird",
+  "fish": "Fish",
+  "hamster": "Hamster",
+  "rabbit": "Rabbit",
+  "turtle": "Turtle",
+  "allProducts": "All",
+  "food": "Food",
+  "toy": "Toy",
+  "training": "Training",
+  "toiletandCleaning" : "Toilet and Cleaning",
+  "clothes": "Clothes",
+  "bed": "Bed",
+  "cage": "Cage",
+  "accessories": "Accessories",
+  "foodSupplement": "Food Supplement",
+  "health": "Health"
 }
