--- a/assets/translations/tr.json
+++ b/assets/translations/tr.json
@@ -30,6 +30,15 @@
   "faq": "S.S.S.",
   "gdpr": "KVKK",
 
+  "registerPage": "Kayıt Sayfası",
+  "registerAppBarTitle": "Kayıt Ol",
+  "registerFormText1": "Kullanıcı Adı",
+  "registerFormText2": "Ad soyad",
+  "registerFormText3": "E-posta",
+  "registerFormText4": "Şifre",
+  "registerFormText5": "Şifre Tekrar",
+  "registerButton": "Kayıt Ol",
+
   "homePage": "Ana Sayfa",
   "homePageTitle1": "Yürüyüş Asistanı",
   "homePageTitle2": "Eğitim Asistanı",
@@ -81,5 +90,27 @@
   "settingsPageSubtitle6": "Dil Ayarları",
   "settingsPageSubtitle7": "Tema Ayarları",
   "settingsPageSubtitle8": "Gizlilik Politikası",
-  "settingsPageSubtitle9": "Hakkında"
+  "settingsPageSubtitle9": "Hakkında",
+
+  "marketPage": "Market",
+  "petCategories": "Kategoriler",
+  "all": "Hepsi",
+  "dog": "Köpek",
+  "cat": "Kedi",
+  "bird": "Kuş",
+  "fish": "Balık",
+  "hamster": "Hamster",
+  "rabbit": "Tavşan",
+  "turtle": "Kaplumbağa",
+  "allProducts": "Tümü",
+  "food": "Mama",
+  "toy": "Oyuncak",
+  "training": "Eğitim",
+  "toiletandCleaning": "Tuvalet ve Temizlik",
+  "clothes": "Kıyafet",
+  "bed": "Yatak",
+  "cage": "Kafes",
+  "accessories": "Aksesuarlar",
+  "foodSupplement": "Mama Takviyesi",
+  "health": "Sağlık"
 }
