--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -92,6 +92,21 @@
   "settingsPageSubtitle8": "Privacy Policy",
   "settingsPageSubtitle9": "About",
 
+  "petaddPage": "Add Pet",
+  "selectPetCategory": "Pet Type",
+  "color": "Color",
+  "colorInputHintText": "Color Input",
+  "sex": "Sex",
+  "male": "Male",
+  "female": "Female",
+  "dateOfBirth": "Date of Birth",
+  "weight": "Weight",
+  "foodType": "Food Type",
+  "dryFood": "Dry Food",
+  "wetFood": "Wet Food",
+  "rawFood": "Raw Food",
+  "specialFood": "Special Food",
+
   "marketPage": "Market",
   "petCategories": "Categories",
   "all": "All",
