--- a/assets/translations/tr.json
+++ b/assets/translations/tr.json
@@ -92,6 +92,21 @@
   "settingsPageSubtitle8": "Gizlilik Politikası",
   "settingsPageSubtitle9": "Hakkında",
 
+  "petaddPage": "Dost Ekle",
+  "selectPetCategory": "Tür Seçiniz",
+  "color": "Renk",
+  "colorInputHintText": "Renk Seçiniz",
+  "sex": "Cinsiyet",
+  "male": "Erkek",
+  "female": "Dişi",
+  "dateOfBirth": "Doğum Tarihi",
+  "weight": "Ağırlık",
+  "foodType": "Mama Türü",
+  "dryFood": "Kuru Mama",
+  "wetFood": "Yaş Mama",
+  "rawFood": "Çiğ Mama",
+  "specialFood": "Özel Mama",
+
   "marketPage": "Market",
   "petCategories": "Kategoriler",
   "all": "Hepsi",
