Fix: pet add page

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -106,6 +106,8 @@
   "wetFood": "Wet Food",
   "rawFood": "Raw Food",
   "specialFood": "Special Food",
+  "microchipNumber": "Microchip Number",
+  "save": "Save",
 
   "marketPage": "Market",
   "petCategories": "Categories",
