--- a/assets/translations/tr.json
+++ b/assets/translations/tr.json
@@ -106,6 +106,8 @@
   "wetFood": "Yaş Mama",
   "rawFood": "Çiğ Mama",
   "specialFood": "Özel Mama",
+  "microchipNumber": "Mikroçip Numarası",
+  "save": "Kaydet",
 
   "marketPage": "Market",
   "petCategories": "Kategoriler",
