--- a/assets/translations/tr.json
+++ b/assets/translations/tr.json
@@ -74,6 +74,26 @@
   "start": "Başla",
   "stop": "Durdur",
 
+  "activityPage": "Aktivite Sayfası",
+  "whatisitdoing": "Ne yapıyor?",
+  "foodActivity": "Yemek",
+  "waterDrink": "Su İçme",
+  "toiletActivity": "Tuvalet",
+  "gameActivity": "Oyun",
+  "sleepActivity": "Uyku",
+  "personalCareActivity": "Bakım",
+  "careCheckActivity": "Sağlık",
+  "trainingAP": "Eğitim",
+  "petScoialization": "Sosyalleşme",
+  "featherCare": "Tüy",
+  "nailCare": "Tırnak",
+  "bathe": "Yıkanma",
+  "walk": "Yürüyüş",
+  "vetVisit": "Veteriner",
+  "vaccine": "Aşı",
+  "petMedicine": "İlaç",
+  "parasiticControl": "Parazit",
+
   "profilePage": "Profil",
   "age": "Yaş",
   "myPets": "Evcil Hayvanlarım",
