--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -74,6 +74,26 @@
   "registerFormText5": "Password Again",
   "registerButton": "Register",
 
+  "activityPage": "Activity Page",
+  "whatisitdoing": "What is it doing?",
+  "foodActivity": "Food",
+  "waterDrink": "Water Drink",
+  "toiletActivity": "Toilet",
+  "gameActivity": "Game",
+  "sleepActivity": "Sleep",
+  "personalCareActivity": "Care",
+  "careCheckActivity": "Care Check",
+  "trainingAP": "Training",
+  "petScoialization": "Socialization",
+  "featherCare": "Feather",
+  "nailCare": "Nail",
+  "bathe": "Bathe",
+  "walk": "Walk",
+  "vetVisit": "Vet Visit",
+  "vaccine": "Vaccine",
+  "petMedicine": "Pet Medicine",
+  "parasiticControl": "Parasitic",
+
   "profilePage": "Profil",
   "age": "Age",
   "myPets": "My Pets",
@@ -108,6 +128,7 @@
   "specialFood": "Special Food",
   "microchipNumber": "Microchip Number",
   "save": "Save",
+
 
   "marketPage": "Market",
   "petCategories": "Categories",
